--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-awesome-paginate": "^1.2.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
